# Gunero

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  transaction.md
src/: CMakeLists.txt  JoinSplit.hpp  NoteEncryption.hpp  main.cpp  main.rs  serialize.h  sparse_merkle_tree_check_read_gadget.hpp  sparse_merkle_tree_check_read_gadget.tcc  sparse_merkle_tree_check_update_gadget.hpp  sparse_merkle_tree_check_update_gadget.tcc
src/crypto/: common.h
test/transactions/: README.md
